--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,34 @@ services:
     volumes:
       - ./certbot/certs:/usr/local/etc/haproxy/certbot/certs
       # - ./certbot/webroot:/
-      - ./ssl:/usr/local/etc/haproxy/ssl
+      # - ./ssl:/usr/local/etc/haproxy/ssl
       - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-      
+    ports:
+      - "80:80"
+      - "443:443"
+    restart: always
+    networks:
+      vpcbr:
+        ipv4_address: 172.18.0.2
+
   certbot:
     image: certbot/certbot:latest
     volumes:
       - ./certbot/certs:/etc/letsencrypt
       - ./certbot/webroot:/var/www/certbot_webroot
-    network_mode: bridge
-  
+    networks:
+      vpcbr:
+        ipv4_address: 172.18.0.3
+
   app:
     image: php:7.2-apache
     external_links:
       - mysql:db
     volumes:
       - ./php/example:/var/www/html
-    network_mode: bridge
+    networks:
+      vpcbr:
+        ipv4_address: 172.18.0.10
 
   mysql:
     image: mysql:8.0.12
@@ -34,10 +45,14 @@ services:
       - MYSQL_ROOT_PASSWORD=on!yforte$$t #on!yforte$t
       #- MYSQL_USER=myuser
       #- MYSQL_PASSWORD=myPa$$sw0rd #password: mYpas$w0rd
-    network_mode: bridge
+    networks:
+      vpcbr:
+        ipv4_address: 172.18.0.4
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     external_links:
       - mysql:db
-    network_mode: bridge
+    networks:
+      vpcbr:
+        ipv4_address: 172.18.0.5
