Modify typing error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
     volumes:
       - ./mysql/conf.d:/etc/mysql/conf.d
       - ./mysql/data:/var/lib/mysql
-    environments:
+    environment:
       # $$ for escaping of $: convert $$ to $
-      - MYSQL_ROOT_PASSWORD=on!yforte$$t
+      - MYSQL_ROOT_PASSWORD=on!yforte$$t #on!yforte$t
       #- MYSQL_USER=myuser
       #- MYSQL_PASSWORD=myPa$$sw0rd #password: mYpas$w0rd
     networks:
