Modify typing error & delete unused user, group

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -2,10 +2,9 @@
 # "How To Use HAProxy to Set Up HTTP Load Balancing on an Ubuntu VPS"
 # @see https://www.digitalocean.com/community/tutorials/how-to-use-haproxy-to-set-up-http-load-balancing-on-an-ubuntu-vps
 global
+  daemon
   log 127.0.0.1 local0 notice
   maxconn 2048
-  user haproxy
-  group haproxy
 
 defaults
   log global
@@ -15,7 +14,7 @@ defaults
   retries 3
   option redispatch
   timeout connect 5000
-  timeout clinet 10000
+  timeout client 10000
   timeout server 10000
   # haproxy status check URI
   stats enable
