Modify allow specific url

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -24,9 +24,12 @@ defaults
 frontend http-in
   mode http 
   bind *:80
+  
+  acl is_app hdr(host) exp1.potential.co.kr
   acl is_phpmyadmin hdr(host) exp2.potential.co.kr
+
+  use_backend app if is_app
   use_backend phpmyadmin if is_phpmyadmin
-  default_backend app
 
 backend app 
   mode http 
