--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -23,15 +23,15 @@ defaults
   
 frontend http-in
   mode http 
-  bind *:80
+  bind *:${PORT_HTTP}
   
-  acl is_app hdr(host) exp1.potential.co.kr
-  acl is_phpmyadmin hdr(host) exp2.potential.co.kr
+  acl is_website hdr(host) ${HDR_HOST_WEBSITE_URL}
+  acl is_phpmyadmin hdr(host) 4{HDR_HOST_PHPMYADMIN_URL}
 
-  use_backend app if is_app
+  use_backend website if is_website
   use_backend phpmyadmin if is_phpmyadmin
 
-backend app 
+backend website 
   mode http 
   server app1 172.18.0.10:80
 
