--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -26,7 +26,7 @@ frontend http-in
   bind *:${PORT_HTTP}
   
   acl is_website hdr(host) ${HDR_HOST_WEBSITE_URL}
-  acl is_phpmyadmin hdr(host) 4{HDR_HOST_PHPMYADMIN_URL}
+  acl is_phpmyadmin hdr(host) ${HDR_HOST_PHPMYADMIN_URL}
 
   use_backend website if is_website
   use_backend phpmyadmin if is_phpmyadmin
