--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -23,10 +23,10 @@ defaults
   
 frontend http-in
   mode http 
-  bind *:${PORT_HTTP}
+  bind "*:${PORT_HTTP}"
   
-  acl is_website hdr(host) ${HDR_HOST_WEBSITE_URL}
-  acl is_phpmyadmin hdr(host) ${HDR_HOST_PHPMYADMIN_URL}
+  acl is_website hdr(host) "${HDR_HOST_WEBSITE_URL}"
+  acl is_phpmyadmin hdr(host) "${HDR_HOST_PHPMYADMIN_URL}"
 
   use_backend website if is_website
   use_backend phpmyadmin if is_phpmyadmin
