Modify ip to env

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -33,8 +33,8 @@ frontend http-in
 
 backend website 
   mode http 
-  server app1 172.18.0.10:80
+  server app1 "${BACKEND_WEBSITE_SERVER_ADDR}"
 
 backend phpmyadmin
   mode http 
-  server phpmyadmi 172.18.0.5:80
+  server phpmyadmin "${BACKEND_PHPMYADMIN_SERVER_ADDR}"
