--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - MYSQL_ROOT_PASSWORD=on!yforte$$t #password: on!yforte$t
       - MYSQL_USER=myuser
       - MYSQL_PASSWORD=myPa$$sw0rd #password: mYpas$w0rd
+      - MYSQL_DATABASE=test
     networks:
       main:
         ipv4_address: 172.18.0.3
