--- a/mysql/conf.d/my.cnf
+++ b/mysql/conf.d/my.cnf
@@ -1,7 +1,7 @@
 [mysqld]
 datadir=/var/lib/mysql
 socket=/var/lib/mysql/mysql.sock
-user=mysql
+# user=mysql
 # Default to using old password format for compatibility with mysql 3.x
 # clients (those using the mysqlclient10 compatibility package).
 old_passwords=1
