--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
   mysql:
     image: mysql:8.0.12
     volumes:
-      - ./mysql/conf.d:/etc/mysql/conf.d
+      # - ./mysql/conf.d:/etc/mysql/conf.d
       - ./mysql/data:/var/lib/mysql
     environment:
       # $$ for escaping of $: convert $$ to $
