--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,55 +5,50 @@ services:
     image: haproxy:1.8.14
     restart: always
     volumes:
-      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ${VOLUME_HAPROXY_CFG}:/usr/local/etc/haproxy/haproxy.cfg:ro
     ports:
       - "80:80"
       - "443:443"
     environment:
       - PORT_HTTP=80
       - PORT_HTTPS=443
-      - HDR_HOST_WEBSITE_URL=exp1.potential.co.kr
-      - HDR_HOST_PHPMYADMIN_URL=exp2.potential.co.kr
-      - BACKEND_WEBSITE_SERVER_ADDR_1=172.18.0.10:80
-      - BACKEND_PHPMYADMIN_SERVER_ADDR=172.18.0.5:80
+      - HDR_HOST_APP_URL=${URL_APP}
+      - HDR_HOST_PHPMYADMIN_URL=${URL_PHPMYADMIN}
+      - BACKEND_APP_SERVER_ADDR=${IPV4_ADDR_APP}
+      - BACKEND_PHPMYADMIN_SERVER_ADDR=${IPV4_ADDR_PHPMYADMIN}
     networks:
       main:
-        ipv4_address: 172.18.0.2
+        ipv4_address: ${IPV4_ADDR_HAPROXY}
 
   app:
     image: php:7.2-apache
     restart: always
-    # links:
-    #   - mysql:db
     volumes:
-      - ./php/example:/var/www/html
+      - ${VOLUME_APP}:/var/www/html
     networks:
       main:
-        ipv4_address: 172.18.0.10
+        ipv4_address: ${IPV4_ADDR_APP}
 
   mysql:
     image: mysql:8.0.12
     restart: always
     volumes:
-      - ./mysql/conf.d/mysql.cnf:/etc/mysql/conf.d/mysql.cnf:ro
-      - ./mysql/data:/var/lib/mysql
+      - ${VOLUME_MYSQL_CONF}:/etc/mysql/conf.d/mysql.cnf:ro
+      - ${VOLUME_MYSQL_DATA}:/var/lib/mysql
     environment:
-      # $$ for escaping of $: convert $$ to $
-      - MYSQL_ROOT_PASSWORD=on!yforte$$t #password: on!yforte$t
-      - MYSQL_USER=myuser
-      - MYSQL_PASSWORD=myPa$$sw0rd #password: myPa$sw0rd
-      - MYSQL_DATABASE=test
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
     networks:
       main:
-        ipv4_address: 172.18.0.3
+        ipv4_address: ${IPV4_ADDR_MYSQL}
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    # links:
-    #   - mysql:db
     networks:
       main:
-        ipv4_address: 172.18.0.5
+        ipv4_address: ${IPV4_ADDR_PHPMYADMIN}
 
 networks: 
   main:
@@ -62,4 +57,4 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 172.18.0.0/24
+        - subnet: ${NETWORK_CONFIG_SUBNET}
