--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -25,7 +25,7 @@ frontend http-in
   mode http 
   bind "*:${PORT_HTTP}"
   
-  acl is_website hdr(host) "${HDR_HOST_WEBSITE_URL}"
+  acl is_website hdr(host) "${HDR_HOST_APP_URL}"
   acl is_phpmyadmin hdr(host) "${HDR_HOST_PHPMYADMIN_URL}"
 
   use_backend website if is_website
@@ -33,7 +33,7 @@ frontend http-in
 
 backend website 
   mode http 
-  server app1 "${BACKEND_WEBSITE_SERVER_ADDR_1}"
+  server app "${BACKEND_APP_SERVER_ADDR}"
 
 backend phpmyadmin
   mode http 
