--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,12 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
+    restart: always
+    environment:
+      PMA_PORT: 3306
+      PMA_HOST: db
+      PMA_USER: root
+      PMA_PASSWORD: ${MYSQL_PASSWORD}
     networks:
       main:
         ipv4_address: ${IPV4_ADDR_PHPMYADMIN}
