Add database info to app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,9 @@ services:
     restart: always
     volumes:
       - ${VOLUME_APP}:/var/www/html
+    environment:
+      - MYSQL_PORT: ${MYSQL_DEFAULT_PORT}
+      - MYSQL_HOST: ${IPV4_ADDR_MYSQL}
     networks:
       main:
         ipv4_address: ${IPV4_ADDR_APP}
@@ -52,7 +55,7 @@ services:
     container_name: phpmyadmin
     restart: always
     environment:
-      PMA_PORT: 3306
+      PMA_PORT: ${MYSQL_DEFAULT_PORT}
       PMA_HOST: ${IPV4_ADDR_MYSQL}
     networks:
       main:
