Add certbot conf

--- a/conf/haproxy/haproxy.cfg
+++ b/conf/haproxy/haproxy.cfg
@@ -21,20 +21,29 @@ defaults
   stats uri /haproxy?stats
   stats auth iamuser:on!yforte$t
   
+frontend certbot-in
+  bind "*:${PORT_HTTP}"
+  
+  acl letsencrypt-acl path_beg /.well-known/acme-challenge/
+  use_backend letsencrypt-backend if letsencrypt-acl
+
 frontend http-in
   mode http 
   bind "*:${PORT_HTTP}"
   
-  acl is_website hdr(host) "${HDR_HOST_APP_URL}"
-  acl is_phpmyadmin hdr(host) "${HDR_HOST_PHPMYADMIN_URL}"
+  acl website-acl hdr(host) "${HDR_HOST_APP_URL}"
+  acl phpmyadmin-acl hdr(host) "${HDR_HOST_PHPMYADMIN_URL}"
 
-  use_backend website if is_website
-  use_backend phpmyadmin if is_phpmyadmin
+  use_backend website-backend if website-acl
+  use_backend phpmyadmin-backend if phpmyadmin-acl
 
-backend website 
+backend letsencrypt-backend
+  server letsencrypt 127.0.0.1:54321
+
+backend website-backend
   mode http 
   server app "${BACKEND_APP_SERVER_ADDR}"
 
-backend phpmyadmin
+backend phpmyadmin-backend
   mode http 
   server phpmyadmin "${BACKEND_PHPMYADMIN_SERVER_ADDR}"
