--- a/conf/haproxy/haproxy.cfg
+++ b/conf/haproxy/haproxy.cfg
@@ -17,9 +17,9 @@ defaults
   timeout client 10000
   timeout server 10000
   # haproxy status check URI
-  stats enable
-  stats uri /haproxy?stats
-  stats auth iamuser:on!yforte$t
+  # stats enable
+  # stats uri /haproxy?stats
+  # stats auth iamuser:on!yforte$t
   
 frontend http-in
   mode http 
@@ -34,7 +34,7 @@ frontend http-in
   use_backend phpmyadmin-backend if phpmyadmin-acl
 
 backend letsencrypt-backend
-  server letsencrypt 127.0.0.1:8888
+  server letsencrypt "${IPV4_ADDR_HAPROXY}":"${PORT_CERTBOT}"
 
 backend website-backend
   mode http 
