--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,12 @@ services:
     environment:
       - PORT_HTTP=80
       - PORT_HTTPS=443
+      - PORT_CERTBOT=${PORT_CERTBOT}
       - HDR_HOST_APP_URL=${URL_APP}
       - HDR_HOST_PHPMYADMIN_URL=${URL_PHPMYADMIN}
       - BACKEND_APP_SERVER_ADDR=${IPV4_ADDR_APP}
       - BACKEND_PHPMYADMIN_SERVER_ADDR=${IPV4_ADDR_PHPMYADMIN}
+      - IPADDR_ADDR_CERTBOT=${IPADDR_ADDR_CERTBOT}
     networks:
       main:
         ipv4_address: ${IPV4_ADDR_HAPROXY}
