--- a/conf/haproxy/haproxy.cfg
+++ b/conf/haproxy/haproxy.cfg
@@ -34,7 +34,7 @@ frontend http-in
   use_backend phpmyadmin-backend if phpmyadmin-acl
 
 backend letsencrypt-backend
-  server letsencrypt "${IPV4_ADDR_CERTBOT}":"${PORT_CERTBOT}"
+  server letsencrypt "${IPV4_ADDR_HAPROXY}":"${PORT_CERTBOT}"
 
 backend website-backend
   mode http 
