--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - HDR_HOST_PHPMYADMIN_URL=${URL_PHPMYADMIN}
       - BACKEND_APP_SERVER_ADDR=${IPV4_ADDR_APP}
       - BACKEND_PHPMYADMIN_SERVER_ADDR=${IPV4_ADDR_PHPMYADMIN}
-      - IPADDR_ADDR_CERTBOT=${IPADDR_ADDR_CERTBOT}
+      - IPV4_ADDR_HAPROXY=${IPV4_ADDR_HAPROXY}
     networks:
       main:
         ipv4_address: ${IPV4_ADDR_HAPROXY}
