--- a/docker-compose-certbot.yml
+++ b/docker-compose-certbot.yml
@@ -3,9 +3,9 @@ version: '3'
 services:
   certbot:
     image: certbot/certbot:latest
+    command: certbot certonly --standalone -d ${URL_APP} -d ${URL_PHPMYADMIN} --agree-tos --non-interactive --http-01-port=${PORT_CERTBOT}
     volumes:
       - ${VOLUME_CERTBOT_CERTS}:/etc/letsencrypt
-      - ${VOLUME_CERTBOT_WEBROOT}:/var/www/certbot_webroot
     networks:
       main:
         ipv4_address: ${IPV4_ADDR_CERTBOT}
