--- a/conf/haproxy/haproxy.cfg
+++ b/conf/haproxy/haproxy.cfg
@@ -41,8 +41,7 @@ frontend http-in
   
 frontend https-in
   mode https
-  bind *:443 ssl crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_APP_URL}"/"${HDR_HOST_APP_URL}".pem
-                 crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_PHPMYADMIN_URL}"/"${HDR_HOST_PHPMYADMIN_URL}".pem
+  bind *:443 ssl crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_APP_URL}"/"${HDR_HOST_APP_URL}".pem crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_PHPMYADMIN_URL}"/"${HDR_HOST_PHPMYADMIN_URL}".pem
 
   acl website-acl hdr(host) "${HDR_HOST_APP_URL}"
   acl phpmyadmin-acl hdr(host) "${HDR_HOST_PHPMYADMIN_URL}"
