--- a/docker-compose-certbot.yml
+++ b/docker-compose-certbot.yml
@@ -14,7 +14,8 @@ services:
       "${URL_PHPMYADMIN}",
       "--agree-tos", 
       "--non-interactive", 
-      "--http-01-port=${PORT_CERTBOT}"
+      "--http-01-port",
+      "${PORT_CERTBOT}"
     ],
     volumes:
       - ${VOLUME_CERTBOT_CERTS}:/etc/letsencrypt
