Update certbot files

--- a/docker-compose-certbot.yml
+++ b/docker-compose-certbot.yml
@@ -5,8 +5,10 @@ services:
     image: certbot/certbot:latest
     # command: certbot certonly --standalone -d ${URL_APP} -d ${URL_PHPMYADMIN} --agree-tos --non-interactive --http-01-port=${PORT_CERTBOT}
     command: [
+      "certbot",
       "certonly", 
       "--standalone", 
+      "--email=${CERTBOT_ISSUER_EMAIL}",
       "-d=${URL_APP}", 
       "-d=${URL_PHPMYADMIN}",
       "--agree-tos", 
