--- a/conf/haproxy/haproxy.cfg
+++ b/conf/haproxy/haproxy.cfg
@@ -39,15 +39,15 @@ frontend http-in
   acl letsencrypt-acl path_beg /.well-known/acme-challenge/
   use_backend letsencrypt-backend if letsencrypt-acl
   
-frontend https-in
-  mode https
-  bind *:443 ssl crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_APP_URL}"/"${HDR_HOST_APP_URL}".pem crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_PHPMYADMIN_URL}"/"${HDR_HOST_PHPMYADMIN_URL}".pem
+# frontend https-in
+#   mode https
+#   bind *:443 ssl crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_APP_URL}"/"${HDR_HOST_APP_URL}".pem crt "${HAPROXY_CERTBOOT_CERTS_PATH}"/"${HDR_HOST_PHPMYADMIN_URL}"/"${HDR_HOST_PHPMYADMIN_URL}".pem
 
-  acl website-acl hdr(host) "${HDR_HOST_APP_URL}"
-  acl phpmyadmin-acl hdr(host) "${HDR_HOST_PHPMYADMIN_URL}"
+#   acl website-acl hdr(host) "${HDR_HOST_APP_URL}"
+#   acl phpmyadmin-acl hdr(host) "${HDR_HOST_PHPMYADMIN_URL}"
 
-  use_backend website-backend if website-acl
-  use_backend phpmyadmin-backend if phpmyadmin-acl
+#   use_backend website-backend if website-acl
+#   use_backend phpmyadmin-backend if phpmyadmin-acl
 
 backend letsencrypt-backend
   server letsencrypt "${IPV4_ADDR_CERTBOT}":"${PORT_CERTBOT}"
