--- a/conf/haproxy/haproxy.cfg
+++ b/conf/haproxy/haproxy.cfg
@@ -34,7 +34,7 @@ frontend http-in
   mode http 
   bind *:80
   
-  redirect scheme https code 301 if !letsencrypt-acl
+  # redirect scheme https code 301 if !letsencrypt-acl
 
   acl letsencrypt-acl path_beg /.well-known/acme-challenge/
   use_backend letsencrypt-backend if letsencrypt-acl
