--- a/docker-compose-certbot.yml
+++ b/docker-compose-certbot.yml
@@ -7,9 +7,9 @@ services:
     command: [
       "certonly", 
       "--standalone", 
-      "--email=${CERTBOT_ISSUER_EMAIL}",
-      "-d=${URL_APP}", 
-      "-d=${URL_PHPMYADMIN}",
+      "--email", "${CERTBOT_ISSUER_EMAIL}",
+      "-d", "${URL_APP}", 
+      "-d", "${URL_PHPMYADMIN}",
       "--agree-tos", 
       "--non-interactive", 
       "--http-01-port=${PORT_CERTBOT}"
