Update certbot files

--- a/docker-compose-certbot.yml
+++ b/docker-compose-certbot.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   certbot:
     image: certbot/certbot:latest
+    container_name: certbot
     command: [
       "certonly", 
       "--standalone", 
@@ -15,6 +16,7 @@ services:
     ]
     volumes:
       - ${VOLUME_CERTBOT_CERTS}:/etc/letsencrypt
+      - ${VOLUME_CERTBOT_LOG}:/var/log/letsencrypt
     # environment:
     #   - USER_EMAIL=${CERTBOT_ISSUER_EMAIL}
     #   - URL_APP=${URL_APP}
