--- a/conf/haproxy/haproxy.http.cfg
+++ b/conf/haproxy/haproxy.http.cfg
@@ -15,8 +15,9 @@ defaults
   timeout server 10000
 
 frontend http-in
-  mode http 
   bind *:80
+
+  reqadd X-Forwarded-Proto:\ http
 
   acl letsencrypt-acl path_beg /.well-known/acme-challenge/
   use_backend letsencrypt-backend if letsencrypt-acl
@@ -31,9 +32,7 @@ backend letsencrypt-backend
   server letsencrypt "${IPV4_ADDR_CERTBOT}":"${PORT_CERTBOT}"
 
 backend website-backend
-  mode http 
-  server app "${BACKEND_APP_SERVER_ADDR}"
+  server app "${BACKEND_APP_SERVER_ADDR}:80"
 
 backend phpmyadmin-backend
-  mode http 
-  server phpmyadmin "${BACKEND_PHPMYADMIN_SERVER_ADDR}"
+  server phpmyadmin "${BACKEND_PHPMYADMIN_SERVER_ADDR}:80"
