--- a/.env.template
+++ b/.env.template
@@ -32,9 +32,8 @@ CONF_HAPROXY_CFG_HTTPS=./conf/haproxy/haproxy.https.cfg
 
 # Certbot
 CERTBOT_ISSUER_EMAIL=${YOUR_EMAIL}
-CERTBOT_VOLUME_PATH=/etc/letsencrypt
 
-# mysql
+# MySQL
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=${YOUR_MYSQL_ROOT_PASSWORD}
 MYSQL_USER=${YOUR_MYSQL_USER}
