Update env, compose files
- remove HAPROXY_ROOT_PATH

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: haproxy
     restart: always
     volumes:
-      - ${VOLUME_HAPROXY_CFG}:${HAPROXY_ROOT_PATH}/haproxy.cfg:ro
-      - ${VOLUME_CERTBOT_CERTS}:${HAPROXY_ROOT_PATH}/certbot/certs
-      - ${VOLUME_SSL}:${HAPROXY_ROOT_PATH}/ssl
+      - ${VOLUME_HAPROXY_CFG}:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ${VOLUME_CERTBOT_CERTS}:/usr/local/etc/haproxy/certbot/certs
+      - ${VOLUME_SSL}:/usr/local/etc/haproxy/ssl
     ports:
       - "80:80"
       - "443:443"
@@ -19,8 +19,8 @@ services:
       - BACKEND_APP_SERVER_ADDR=${IPV4_ADDR_APP}
       - BACKEND_PHPMYADMIN_SERVER_ADDR=${IPV4_ADDR_PHPMYADMIN}
       - IPV4_ADDR_CERTBOT=${IPV4_ADDR_CERTBOT}
-      - HAPROXY_ROOT_PATH=${HAPROXY_ROOT_PATH}
-      - HAPROXY_CERTBOOT_CERTS_PATH=${HAPROXY_ROOT_PATH}/certbot/certs
+      - HAPROXY_ROOT_PATH=/usr/local/etc/haproxy
+      - HAPROXY_CERTBOOT_CERTS_PATH=/usr/local/etc/haproxy/certbot/certs
     networks:
       main:
         ipv4_address: ${IPV4_ADDR_HAPROXY}
