--- a/.env.template
+++ b/.env.template
@@ -24,6 +24,9 @@ VOLUME_CERTBOT_LOG=./volume/certbot/logs
 VOLUME_SSL=./volume/ssl
 VOLUME_APP=./php/example
 
+# log
+LOG_PATH=./logs
+
 # HAProxy
 # HAProxy base file for http, https
 CONF_HAPROXY_CFG_HTTP=./conf/haproxy/haproxy.http.cfg
